--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,8 +11,8 @@
             Produtos <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            
-            <li class="divider"></li>
+            <li><%= link_to "Novo", new_product_path %></li>
+            <li><%= link_to "Todos", products_path %></li>
           </ul>
         </li>
         <li class="dropdown">
