Alterar categoria funcionando.

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -15,6 +15,7 @@
         <tr>      
           <td><%= category.name %></td>
           <td><%= category.description %></td>
+	  <td><%= link_to 'Editar', action: 'edit', id: category %></td>
         </tr>
       <% end %>
     </tbody>
