--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to "Novo", new_product_path %></li>
             <li><%= link_to "Todos", products_path %></li>
+            <li><%= link_to "Categorias", categories_path %></li>
           </ul>
         </li>
         <li class="dropdown">
