usuario com cucumber e rspec

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,12 @@
 <% provide(:title, "Contact") %>
 <h1>Contact</h1>
 <p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
-  <a href="https://www.railstutorial.org/contact">contact page</a>.
+ 	If you have any problem contact the dev team:
 </p>
+
+<ul>
+  <li>Adilson Lopes Khouri - NUSP 6411994</li>
+  <li>Alberto Dumont Alves Oliveira - NUSP 9408481</li>
+  <li>Francisco Wallison Carlos Rocha - NUSP 11312711</li>
+  <li>Luciano Gonçalves de Carvalho - NUSP 9412079</li>
+</ul>
