--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,20 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+    <%= link_to "Mercado Livre da construção", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
-        <li><%= link_to "Users", users_new_path %></li>
+        
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Users <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "New", users_new_path %></li>
+            <li><%= link_to "All", users_path %></li>
+          </ul>
+        </li>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             Produtos <b class="caret"></b>
@@ -16,15 +25,12 @@
             <li><%= link_to "Categorias", categories_path %></li>
           </ul>
         </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Account <b class="caret"></b>
-          </a>
           <ul class="dropdown-menu">
             <li><%= link_to "Profile", current_user %></li>
             <li class="divider"></li>
           </ul>
         </li>
+        <li><%= link_to "Help", help_path %></li>
        </ul>
     </nav>
   </div>
