--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -7,6 +7,9 @@
   <%= f.label :description %>
   <%= f.text_field :description, class: 'form-control' %>
 
+  <%= f.label :category %>
+  <%= f.select :category, @category.all.collect {|x| [x.name, x.id]}, {}, class: "form-control" %>
+
   <%= f.label :price %>
   <%= f.text_field :price, class: 'form-control' %>
 
